# argosy

./: COPYING  Cargo.toml  README.md
.github/workflows/: check-platforms.yml  check-targets.yml  check-toolchains.yml
examples/: test.rs
id/: Cargo.toml
id/src/: lib.rs
import/: Cargo.toml
import/src/: dependencies.rs  ffi.rs  importer.rs  lib.rs  loading.rs  sources.rs
license/: APACHE  MIT
proc/: Cargo.toml
proc/src/: lib.rs
src/: asset.rs  error.rs  field.rs  handle.rs  key.rs  lib.rs  loader.rs  typed_id.rs
src/source/: fs.rs  influx.rs  mod.rs
store/: Cargo.toml
store/src/: id_gen.rs  importer.rs  lib.rs  meta.rs  scheme.rs  sha256.rs  sources.rs  store.rs  temp.rs
