[package]
name = "argosy"
version = "0.1.0"
authors = ["Zakarum <zaq.dev@icloud.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/argosy"
homepage = "https://github.com/arcana-engine/argosy"
repository = "https://github.com/arcana-engine/argosy"
description = "Async assets system"
keywords = ["async", "assets", "macro", "derive"]
categories = ["asynchronous", "game-development"]

[features]
store = ["argosy-store", "eyre", "url", "dunce"]

[dependencies]
argosy-proc = { version = "=0.1.0", path = "proc" }
argosy-id = { version = "=0.1.0", path = "id" }
argosy-store = { version = "=0.1.0", path = "store", optional = true }
thiserror = "1.0"
smallvec = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ahash = "0.8"
hashbrown = "0.13"
futures = "0.3"
parking_lot = "0.12"
spin = "0.9"
tracing = "0.1"
num_cpus = "1.0"
tokio = { version =  "1.0", features = ["rt", "sync", "parking_lot"] }
eyre = { version = "0.6", optional = true }
url = { version = "2.2", optional = true }
dunce =  { version = "1.0", optional = true }

[workspace]
members = ["id", "import", "store"]
